--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://earlpaquibol.github.io/valentines",
+  "homepage": "https://EarlPaquibol.github.io/valetines",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
